<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/a_name" />

            <TextView
                android:id="@+id/textView_pub_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="96dp"
                android:scrollbars = "vertical"
                android:text="@string/pub_textView_default" />

            <TextView
                android:id="@+id/textView_prv_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="96dp"
                android:scrollbars = "vertical"
                android:text="@string/prv_textView_default" />

            <Spinner
                android:id="@+id/spinner_security_level_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button_genKeys_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/GenKeys_button"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editText_plain_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/plain_text_default"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button_encrypt_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Encrypt_button"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView_cipher_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="96dp"
                android:scrollbars="vertical"
                android:text="@string/cipher_textView_default" />

            <Button
                android:id="@+id/button_decrypt_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Decrypt_button"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView_decrypted_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/decrypted_textView_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/b_name" />

            <TextView
                android:id="@+id/textView_pub_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="96dp"
                android:scrollbars = "vertical"
                android:text="@string/pub_textView_default" />

            <TextView
                android:id="@+id/textView_prv_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="96dp"
                android:scrollbars = "vertical"
                android:text="@string/prv_textView_default" />

            <Spinner
                android:id="@+id/spinner_security_level_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button_genKeys_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/GenKeys_button" />

            <EditText
                android:id="@+id/editText_plain_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/plain_text_default"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button_encrypt_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Encrypt_button"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView_cipher_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxHeight="96dp"
                android:scrollbars="vertical"
                android:text="@string/cipher_textView_default" />

            <Button
                android:id="@+id/button_decrypt_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Decrypt_button"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView_decrypted_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/decrypted_textView_default" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>